# SO_SIMULATOR

./: Cargo.toml  README.md
hello_rust/: Cargo.toml  historico_recursos.csv  logs_simulacao.csv
hello_rust/src/: estatisticas.rs  hospital.rs  main.rs  monitor.rs  monitor_gui.rs  paciente.rs  recursos.rs  sincronizacao.rs
src/: hospital.rs  monitor.rs  sincronizacao.rs
