[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# Dependências
[dependencies]
# Programação Assíncrona e Concorrência
tokio = { version = "1.38", features = ["full"] }

# Interface Gráfica (GUI)
eframe = "0.28"
egui = "0.28"
egui_plot = "0.28" # Módulo de plotagem para gráficos

# Manipulação de CSV
csv = "1.3"
# Necessário para serialização e deserialização (útil se as estruturas fossem salvas, mas é uma boa prática)
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.2"
